# NISwGSP

UglyMan_NISwGSP_Stitching/: CMakeLists.txt  conanfile.txt
UglyMan_NISwGSP_Stitching/UglyMan_MeshOptimization/imgproc/: precomp.hpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/: Configure.h  Configure_debug.h  main.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching.xcodeproj/: project.pbxproj
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching.xcodeproj/project.xcworkspace/xcuserdata/tobias.xcuserdatad/: UserInterfaceState.xcuserstate
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching.xcodeproj/xcshareddata/xcschemes/: UglyMan_NISwGSP_Stitching.xcscheme
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching.xcodeproj/xcuserdata/tobias.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching.xcodeproj/xcuserdata/tobias.xcuserdatad/xcschemes/: xcschememanagement.plist
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Debugger/: TimeCalculator.cpp  TimeCalculator.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Feature/: ImageData.cpp  MultiImages.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Stitching/: Parameter.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Util/: Statistics.cpp
UglyMan_NISwGSP_Stitching/dylib/: libopencv_calib3d.3.4.13.dylib  libopencv_ccalib.3.4.13.dylib  libopencv_highgui.3.4.13.dylib  libopencv_imgcodecs.3.4.13.dylib  libopencv_stitching.3.4.13.dylib  libopencv_ximgproc.3.4.13.dylib
